Fix appearance of scrollbars in Swagger docs

--- a/webroot/css/style.less
+++ b/webroot/css/style.less
@@ -15,3 +15,8 @@ section.home {
         padding-bottom: 0;
     }
 }
+#swagger-ui {
+    pre.version {
+        overflow: hidden;
+    }
+}
